# modular-fastapi

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  deployment.yaml  docker-compose.yml  main.py  pyproject.toml  run.bat
api/: main.py
api/db/: connection.py
api/routes/: routes.py
api/schemas/: prompt.py
src/: logger.py  main.py  prompt_service.py
src/api/: __init__.py
src/api/v1/: prompts.py
src/core/: database.py  db.py  logger.py  settings.py
src/db/migrations/: env.py
src/domain/models/: prompt_model.py
src/domain/services/: prompt_service.py
src/http/: __init__.py
src/infra/: db.py
src/infra/migrations/: env.py
src/infra/repository/: prompt_repository.py
src/lib/: chains.py
src/model/: prompt.py  prompt_model.py
src/models/: prompt_model.py
src/queries/: prompt_queries.py
src/repository/: prompt_repository.py
src/schemas/: prompt_schema.py
src/services/: prompt_service.py
