[project]
name = "boilerplate-llmapp-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.9.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.18",
    "motor>=3.7.1",
    "uvicorn>=0.34.2",
]
