[project]
name = "boilerplate-llmapp-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "colorlog>=6.9.0",
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.18",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "greenlet>=3.2.2",
]
